k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-cicd-demo-app
  labels:
    app: gitops-cicd-demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitops-cicd-demo-app
  template:
    metadata:
      labels:
        app: gitops-cicd-demo-app
    spec:
      containers:
        - name: app
          image: hoangdonguit/gitops-cicd-demo-app:dev-initial
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
