k8s/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gitops-cicd-demo-app-ingress
spec:
  podSelector:
    matchLabels:
      app: gitops-cicd-demo-app
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
